--- a/package.json
+++ b/package.json
@@ -10,9 +10,19 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.2.1",
+        "alpinejs": "^3.4.2",
+        "autoprefixer": "^10.1.0",
         "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.2.1",
+        "postcss-import": "^12.0.1",
+        "tailwindcss": "^2.0.2"
+    },
+    "dependencies": {
+        "vue": "^3.2.21",
+        "vue-loader": "^16.8.3",
+        "vue-router": "^4.0.12"
     }
 }
